src/objects/Advance_Lookup__c.object
<CustomObject>
    <description>Hold Bank2Business Application Status</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppFID__c</fullName>
        <label>AppFID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Contact Link</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advances Lookup</relationshipLabel>
        <relationshipName>R00N70000002GsS7EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Decision__c</fullName>
        <label>Recommended Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <label>Last Refresh</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Advances</relationshipLabel>
        <relationshipName>R00N70000002GX6TEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBSS_Score_number__c</fullName>
        <formula>VALUE( SBSS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBSS Score number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBSS__c</fullName>
        <label>SBSS Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Advance Lookup</label>
    <listViews>
        <fullName>Todays_Advance_Lookup</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Amount__c</columns>
        <columns>Decision__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Fees__c</columns>
        <columns>Last_Refresh__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Rate__c</columns>
        <columns>Initial_Decision__c</columns>
        <columns>SBSS__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Advance Lookup</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>testreportforadvancelookup</fullName>
        <columns>NAME</columns>
        <columns>AppFID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Amount__c</columns>
        <columns>Decision__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Fees__c</columns>
        <columns>Last_Refresh__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Rate__c</columns>
        <columns>Initial_Decision__c</columns>
        <columns>SBSS__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>test report for advance look up</label>
    </listViews>
    <nameField>
        <label>Advance Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advances Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>